Mike | fixed an issue with spacing on the pie chart

--- a/components/Table/columnDefinitions/playerHeroesColumns.css
+++ b/components/Table/columnDefinitions/playerHeroesColumns.css
@@ -3,13 +3,13 @@
 .percentContainer {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
 }
 
 .textContainer {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin-right: 5px;
 }
 
 .pieChart {
